[tool.poetry]
name = "pep-517-test"
version = "0.1.0"
description = ""
authors = ["Adam Wallis <adam.wallis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
